Lib change (#36)
* use dedicated lib for script prsing

* update umineko_script_parser to v1.0.0

* update swagger
